doc/paper.tex: reminder of a complaint

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -290,7 +290,9 @@ user-supplied boundary conditions.
 
 \fs is a \mathematica package designed to create a fast and easily
 adaptable spectrum generator in C++ for any SUSY model and some
-non-supersymmetric models.  The user specifies the model by giving the
+non-supersymmetric models.
+\JHrem{Which non-supersymmetric models do we support?  I failed to make \fs work for the SM from \sarah.}
+The user specifies the model by giving the
 superfield content, superpotential, gauge symmetries and mass mixings
 in form of \sarah model files.  The boundary conditions on the model
 parameters must be specified in a separate \code{FlexibleSUSY.m} file.
