doc/paper.tex: minor corrections

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -3261,7 +3261,7 @@ White, Phys. Rev. D {\bf 49} (1994) 2435; S.F. King and P.L. White, Phys. Rev. D
   %365 citations counted in INSPIRE as of 03 Nov 2013
 
 \bibitem{eigen}
-Eigen library, version 3.1 \url{http://eigen.tuxfamily.org}
+Eigen library, version 3.1 \url{http://eigen.tuxfamily.org}.
 
 %\cite{King:2005jy}
 \bibitem{King:2005jy} 
@@ -3490,7 +3490,7 @@ Large Muon- and electron-Number Nonconservation in Supergravity Theories,}
 
 %\cite{Chowdhury:2011zr}
 \bibitem{Chowdhury:2011zr}
-  D.~Chowdhury, R.~Garani and S.~KVempati,
+  D.~Chowdhury, R.~Garani and S.~K.~Vempati,
   %``SUSEFLAV: Program for supersymmetric mass spectra with seesaw mechanism and rare lepton flavor violating decays,''
   Comput.\ Phys.\ Commun.\  {\bf 184} (2013) 899
   [arXiv:1109.3551 [hep-ph]].
