--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -289,9 +289,7 @@ a set of model parameters has been found consistent with all
 user-supplied boundary conditions.
 
 \fs is a \mathematica package designed to create a fast and easily
-adaptable spectrum generator in C++ for any SUSY model and some
-non-supersymmetric models.
-\JHrem{Which non-supersymmetric models do we support?  I failed to make \fs work for the SM from \sarah.}
+adaptable spectrum generator in C++ for any SUSY model.
 The user specifies the model by giving the
 superfield content, superpotential, gauge symmetries and mass mixings
 in form of \sarah model files.  The boundary conditions on the model
