--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -200,9 +200,8 @@ minimal supersymmetric standard model (NMSSM) \cite{NMSSM}.
 None of the fundamental motivations of supersymmetry require
 minimality, and specific alternatives to (or extensions of) the MSSM
 are, for example, motivated by the $\mu$-problem of the
-MSSM \cite{Kim:1983dt}; explaining the family structure (see e.g,
-\cite{King:2014nza}) or for successful baryogenesis or leptogenesis
-(see e.g,\cite{King:2008qb}). However constructing specialized tools
+MSSM \cite{Kim:1983dt}; explaining the family structure (see e.g.~\cite{King:2014nza}) or for successful baryogenesis or leptogenesis
+(see e.g.~\cite{King:2008qb}). However constructing specialized tools
 to study all relevant models would require an enormous amount of work.
 So general tools which can automate this process and produce fast and
 reliable programs can greatly enhance our ability to understand and
