slight grammar fix in introduction.  some sentences are still too long.

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -225,7 +225,7 @@ significantly higher limits on first and second generation squarks.
 
 These motivate both exploring non-minimal SUSY models which ameliorate
 the naturalness problems by, for example, raising the tree level Higgs
-mass, and models developed with a fresh perspective, based on other
+mass and models developed with a fresh perspective based on other
 considerations.  In both cases exploration of such models can be aided
 if it is possible to quickly create a fast spectrum generator.
 Currently there is only one option for this, a SPheno-like FORTRAN code
