grammar: Note,  -->  Note

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -594,13 +594,13 @@ spectrum generator for such a SUSY model with \fs, the aforementioned
 model properties have to be defined in a SARAH model file.  The SARAH
 model file can be put into the \code{sarah/<model>/} directory.  See
 the SARAH manual \cite{Staub:2008uz,Staub:2013tta} for a detailed
-explanation of how to write such a model file.  Note, that SARAH
+explanation of how to write such a model file.  Note that SARAH
 already comes with a lot of predefined models, which can be used with
 \fs immediately.
 
 The model boundary conditions are defined in the \fs model file
 \code{FlexibleSUSY.m}, which has to be located in the model directory
-\code{models/<model>/}.  Note, that many example model files can
+\code{models/<model>/}.  Note that many example model files can
 already be found in \code{model_files/}.  In the following it is
 explained how the boundary conditions can be defined on the basis of
 the CMSSM.  The application to other models is straightforward.  The
@@ -729,7 +729,7 @@ The meaning of the three constraints is the following:
   usually the GUT-scale constraint, imposed at the scale where the
   gauge couplings $g_1$ and $g_2$ unify.  The high-scale can be
   defined by an equation of the form \code{g1 == g2} or by a fixed
-  numerical value.  Note, that \fs GUT-normalizes all gauge couplings.
+  numerical value.  Note that \fs GUT-normalizes all gauge couplings.
   Thus, the high-scale definition takes the simple form \code{g1 ==
     g2}.  As a consequence in the calculation of the VEVs $v_u$ and
   $v_d$ from $M_Z$ and $\tan\beta$ at the low-scale the
