note about example for a pure low-energy model

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -876,7 +876,8 @@ constraint is ignored and only the low-scale and SUSY-scale
 constraints are used.  All model parameters which are not specified in
 \code{MINPAR} or \code{EXTPAR} will then be read from the
 corresponding input blocks in the SLHA input file and will be set at
-the SUSY-scale.
+the SUSY-scale.  An example of such a pure low-energy model is the
+MRSSM, where the three gauge couplings do not unify at a common scale.
 
 \fs can create the helper function \code{get_lsp()}, which finds the
 lightest supersymmetric particle (LSP).  To have this function be
