a little language improvement

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -913,7 +913,7 @@ model information, such as parameters, $\beta$-functions, \DRbar\ mass
 spectrum, EWSB, self-energies, and the pole mass spectrum.
 %
 \secref{sec:boundary-conditions} describes how boundary conditions on
-the model parameters are implemented in general at the C++ level.  The
+the model parameters are implemented in general at the C++ level.
 Subsections \ref{sec:calculation-of-gauge-couplings}--\ref{sec:ewsb}
 then show the two concrete boundary conditions, which are always
 imposed: The matching of the model parameters to the Standard Model
