--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -143,8 +143,8 @@ Higgs
 \noindent{\em Program title:} \fs\\ {\em Program obtainable from:}
          {\tt http://flexiblesusy.hepforge.org/}\\ {\em Distribution
            format:}\/ tar.gz\\ {\em Programming language:} {\tt
-           C++}\\ {\em Computer:}\/ Personal computer\\ {\em Operating
-           system:}\/ Tested on Linux 3.x\\ {\em Word size:}\/ 64
+           C++, \mathematica, FORTRAN}\\ {\em Computer:}\/ Personal computer\\ {\em Operating
+           system:}\/ Tested on Linux 3.x, MacOS\\ {\em Word size:}\/ 64
          bits\\ {\em External routines:}\/ SARAH 4.0.4, Boost library,
          Eigen, LAPACK\\ {\em
            Typical running time:}\/ 0.1-0.3 seconds per parameter
