--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -858,7 +858,7 @@ these corrections can be enabled by setting \code{UseHiggs2LoopMSSM =
   True} in the model file and by defining the effective $\mu$-term
 \code{EffectiveMu = \\[Mu]}.  This will add the zero-momentum
 corrections of the order $O(y_t^4 + y_b^2 y_t^2 + y_b^4)$, $O(y_t^2
-g_3^2)$, $O(y_b^2 g_3^2)$, $O(y_\tau^4)$, $O(y_\tau^2 y_b^2)$ from
+g_3^2)$, $O(y_b^2 g_3^2)$, $O(y_\tau^4)$$ from
 \cite{Degrassi:2001yf,Brignole:2001jy,Dedes:2002dy,Brignole:2002bz,Dedes:2003km}.
 For NMSSM-like models (with three CP-even Higgs bosons, two CP-odd
 Higgs bosons, one neutral Goldstone boson) the two-loop contributions
