the programming language used in the Mathmatica program is called Wolfram
> Hi all,
>
> apparently, the programming language used in the Mathmatica program is
> called "Wolfram", although I am not sure how many people would recognize
> the name.  :)
>
>      http://en.wikipedia.org/wiki/Wolfram_Language
>      http://reference.wolfram.com/language
>
> Best,
> Jae-hyeon

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -143,7 +143,7 @@ Higgs
 \noindent{\em Program title:} \fs\\ {\em Program obtainable from:}
          {\tt http://flexiblesusy.hepforge.org/}\\ {\em Distribution
            format:}\/ tar.gz\\ {\em Programming language:} {\tt
-           C++, \mathematica, FORTRAN}\\ {\em Computer:}\/ Personal computer\\ {\em Operating
+           C++, Wolfram/\mathematica, FORTRAN}\\ {\em Computer:}\/ Personal computer\\ {\em Operating
            system:}\/ Tested on Linux 3.x, MacOS\\ {\em Word size:}\/ 64
          bits\\ {\em External routines:}\/ SARAH 4.0.4, Boost library,
          Eigen, LAPACK\\ {\em
