doc/paper.tex: avoid redundancy
sharply ~ manifestly
divided ~ separate

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -338,7 +338,8 @@ boundary conditions as well as input and output parameters can be
 controlled (see \secref{sec:quick-start-alternative-models} and
 \secref{sec:adapting-model-files} for examples).  (ii) In particular
 \fs uses C++ object orientation features to modularize the source code
-so that it is sharply divided into manifestly separate building blocks.
+so that it is sharply divided into building blocks performing
+distinct duties.
 This modular architecture makes it easy
 for the user to modify, reuse, replace or
 extend the individual components (see \secref{sec:adapting-cpp-code}
